fixed css spacing issue

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
 }
 
 
+
 #content{
 	display: flex;
 	flex-direction: column;
@@ -55,6 +56,7 @@ body{
 
 #body{
 	flex:1;
+	display:flex;
 	background-color: #0281cf;
 }
 
@@ -65,6 +67,7 @@ body{
 	margin-bottom: 30px;
 	width: 700px;
 	border: 0.5rem solid;
+	
 }
 .frontImage{
 	width:100%;
@@ -115,6 +118,7 @@ body{
 	border: 0.5rem solid;
 	width: 500px;
 	height: 400px;
+	
 }
 
 .menuImages{
